--- a/rock.html
+++ b/rock.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sábado</title> <!--isso tem algum simbolismo?-->
+    <title>Rock</title> 
     <link rel="stylesheet" href="mob.css"> <!--oq?? cade o musica.css?-->
 </head>
 <body>
 
 
     <header class="menu">
-        <nav><ul> <!--   <--- Compact formatting can save lifes, but mostly time.-->
+        <nav><ul>
                  <li><a href="index.html">Home</a></li>
                  <li><a href="solo.html">Solo</a></li>
-                 <li><a href="rock.html">Rock</a></li> <!-- You get to choose the musical genre of your choice, don't stress 'bout it. -->
+                 <li><a href="rock.html">Rock</a></li> 
         </ul></nav>
     </header>
     
@@ -29,7 +29,7 @@
 
 
 
-               <div class="desc-ROCK"> Cantores/Bandas de ROCK <div class="ROCK">            <!--6 vezes?-->
+               <div class="desc-ROCK"> Cantores/Bandas de ROCK <div class="ROCK">           
 
                     <div>Texto sobre cantor1</div> <!--PS: não confunda "img-x" com "mX1.[formato]" pls-->
                        <div>
@@ -59,18 +59,18 @@
                    <div class="desc-bandaR">
                        Bandas (Descrição)
                    </div>
-                   <div class="desc-appR"> <!--Quê?-->
+                   <div class="desc-appR"> 
                        Aplicativos (Descrição)
                    </div>
                </div>
 
-
+ <!---fun fact: desc-appR and all the rock variants were lost and now i have to do them again goddammit-->
 
        </section>
 
 
 
-    <footer class="rodape">   <!-- Woah é um footer não uma div, "Incredible incredible"- Wario -->
+    <footer class="rodape">  
         @Gastão Vidigal<br>
         Turma do Segundo I<br>
         @daniel  :c
